Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3305,7 +3305,7 @@ input, select, textarea {
 /* Tabs Container */
 .tab-container {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin-bottom: 20px;
 }
 
